Conflict merge - [FIXED #76120594] Overflow of image.
When image was set to width that was wider than the space for the image
within edit content, the image overflew the space for content.
Now the image is contained within div that has 100% width.

Conflicts:
	src/client/js/xpsui/services/form-generator.js

--- a/src/client/scss/x/_inlineedit.scss
+++ b/src/client/scss/x/_inlineedit.scss
@@ -67,6 +67,15 @@
 	// transition: border .5s;
 	cursor: pointer;
 }
+.x-inlineedit:AFTER {
+	@include icon-font($icon-pencil);
+	position: absolute;
+	right: 0;
+	top: 0px;
+	bottom: 0px;
+	color: transparent;
+}
+
 .x-inlineedit-active:AFTER {
 	@include icon-font($icon-pencil);
 
