--- a/src/client/scss/x/default/_inlineedit.scss
+++ b/src/client/scss/x/default/_inlineedit.scss
@@ -22,4 +22,5 @@
 
 .x-inlineedit-active:AFTER {
 	background-color: $inlineedit-pencil-background;
+	color: $color-black;
 }
